--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 0569d9f
+	base = 3a269d3
 	trimbase = 
 	parent = release/kinetic/roslint
-	previous = 
+	previous = 0569d9f
