--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 8691902
+	base = 7caa0fb
 	trimbase = 
 	parent = arch/kinetic/roslint
-	previous = 
+	previous = 8691902
