--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = b04dc26
+	base = 0197b7e
 	trimbase = 
 	parent = release/lunar/roslint
-	previous = 
+	previous = b04dc26
