--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 795e01b
+	base = 6edb5af
 	trimbase = 
 	parent = arch/lunar/roslint
-	previous = 
+	previous = 795e01b
