--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 31529e0
+	base = 5fe5bca
 	trimbase = 
 	parent = release/melodic/roslint
-	previous = 
+	previous = 31529e0
