--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d3e6b28
+	base = d5b8065
 	trimbase = 
 	parent = arch/melodic/roslint
-	previous = 
+	previous = d3e6b28
